# pydantic-to-typescript

./: .gitignore  LICENSE.md  README.md  action.yml  pyproject.toml  requirements.txt  ruff.toml  setup.py
.github/workflows/: cicd.yml  tests.yml
pydantic2ts/: __init__.py  pydantic_v1.py  pydantic_v2.py
pydantic2ts/cli/: script.py
pydantic2ts/examples/: api.py  apiTypes.ts  convert.sh  output.ts  pydantic_models.py
tests/: test_script.py
tests/expected_results/computed_fields/: v2_input.py
tests/expected_results/computed_fields/v2/: output.ts
tests/expected_results/excluding_models/: output.ts  v2_input.py
tests/expected_results/excluding_models/v1/: input.py  output.ts
tests/expected_results/extra_fields/: v1_input.py  v2_input.py
tests/expected_results/extra_fields/v1/: input.py  output.ts
tests/expected_results/extra_fields/v2/: output.ts
tests/expected_results/generics/: input.py  output.ts  v1_input.py  v2_input.py
tests/expected_results/generics/v1/: input.py  output.ts
tests/expected_results/generics/v2/: input.py  output.ts
tests/expected_results/optionals/: README.md  input.py  output.ts  output_readonly_interfaces.ts  output_readonly_interfaces_with_null.ts  output_with_null.ts
tests/expected_results/single_module/v1/: output.ts
tests/expected_results/single_module/v2/: output.ts
tests/expected_results/single_module_alias_id/: input.py  output.ts
tests/expected_results/single_module_to_camel/: input.py  output.ts
tests/expected_results/submodules/: input.py  output.ts  v1_input.py  v2_input.py
tests/expected_results/submodules/v1/: input.py  output.ts
tests/expected_results/submodules/v2/: input.py
(+5 files in other folders)
